[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-fireworks"
version = "0.1.0"
description = "A fireworks display for the terminal"
authors = [{name = "chloem3ow"}]
readme = "README.md"
requires-python = ">=3.6"
keywords = ["fireworks", "terminal", "curses", "animation", "rice"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console :: Curses",
]

[project.scripts]
fireworks = "fireworks:main"

[project.urls]
Homepage = "https://github.com/chloem3ow/terminal-fireworks"

[tool.setuptools]
py-modules = ["fireworks"]
